Fix up the dark mode ad wrap

--- a/dark.css
+++ b/dark.css
@@ -39,5 +39,5 @@ div#meta-hidden div.export {
 }
 
 div.margin-image-wrap {
-  background: linear-gradient(to bottom, #303030 0%, #404040 100%);
+  background: linear-gradient(to bottom, #404040 0%, black 100%);
 }
